# renderer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: camera.h  light.h  material.h  mathutil.h  mesh.h  model.h  opengl.h  scene.h  scenenode.h  shader.h  texture.h  util.h
resources/shaders/: normalMapped.fsh  normalMapped.vert
src/: camera.cpp  main.cpp  mathutil.cpp  model.cpp  opengl.cpp  scene.cpp  shader.cpp  texture.cpp  util.cpp
